fix(language-selector): add background for dark mode select fixes #54

--- a/src/app/components/language-selector/language-selector.component.scss
+++ b/src/app/components/language-selector/language-selector.component.scss
@@ -8,5 +8,11 @@ select {
 
   @media (prefers-color-scheme: dark) {
     color: white;
+
+    * {
+      // Only required for Windows, Chrome
+      // https://github.com/sign/translate/issues/54
+      background: black;
+    }
   }
 }
